Add sorting to data webpage

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@ wiki/
 
 *Test*
 data/sources.txt
+data/combined.json
+data/combineJson.py
+data/import.json
+data/MoonbouncePlus_bak.json
+
+images/
