Move Quests, Clean GitIgnore

--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,10 @@ data/combined.json
 images/
 encrypt.html
 scripts/scrap.user.js
-time.html
-data/quests/cleaned_quests.json
-data/quests/cleanquests.py
-data/quests/questsfull.json
 scripts/timer.user.js
+
+time.html
+
 *.mw
 *.lua
+/quests
